# pydmp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  dev  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements-docs.txt  ruff.toml  sitemap.xml  versions.json  zensical.toml
.claude/: settings.json
.claude/hooks/: pre-commit.sh
.github/: CODEOWNERS  aviato.seed.json  aviato.yaml  aviato.yml  funding.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aviato-ci.yml  aviato-docs.yml  aviato-drift.yml  ci.yml  codeql.yml  create-release.yml  docs.yml  publish.yml  pythonpackage.yaml  release.yml  validate-branch-flow.yml
1.0.0-alpha.1/: 404.html  index.html  sitemap.xml
1.0.0-alpha.1/compatibility/: index.html
1.0.0-alpha.2/: 404.html  index.html  sitemap.xml
1.0.0-alpha.2/compatibility/: index.html
1.0.1/: 404.html  index.html  search.json  sitemap.xml
1.0.1/compatibility/: index.html
1.1.0/: 404.html  index.html  search.json  sitemap.xml
1.1.0/compatibility/: index.html
api/entities/: index.html
api/panel/: index.html
api/protocol/: index.html
api/status/: index.html
dev/: 404.html  index.html  search.json  sitemap.xml
dev-3dab78c/: 404.html  index.html  sitemap.xml
dev-4d96853/: 404.html  index.html  sitemap.xml
dev-5aac623/: 404.html  index.html  sitemap.xml
dev-addc53f/: 404.html  index.html  sitemap.xml
dev-b282a4a/: 404.html  index.html  objects.inv  sitemap.xml
dev-bfcb439/: 404.html  index.html  sitemap.xml
dev-e3f3505/: 404.html  index.html  sitemap.xml
dev-ebb8522/: 404.html  index.html  sitemap.xml
dev/compatibility/: index.html
docs/: index.md
examples/: README.md  _example_support.py  arm_areas.py  bypass_zone.py  disarm_areas.py  listen.py  query_area_settings.py  query_areas.py  query_lockout_code.py  query_outputs.py  query_profiles.py  query_users.py  query_zone_settings.py  query_zones.py  sensor_reset.py  set_output.py  unbypass_zone.py
search/: search_index.json
src/: example.py
tests/: conftest.py  fakes.py  test_area_zone_output.py  test_cli_check_listen_text.py  test_cli_commands_json.py  test_cli_helpers.py  test_cli_json.py  test_cli_listen.py  test_cli_more_json.py  test_cli_output_and_zones_text.py  test_cli_panel_wiring.py  test_cli_text_and_config.py  test_cli_text_tables.py  test_cli_version.py  test_cli_zones_outputs.py  test_command_lengths.py  test_core_area_control.py  test_core_area_settings.py  test_core_area_status.py  test_core_listener.py  test_core_lockout_code.py  test_core_manager.py  test_core_output_control.py  test_core_output_status.py  test_core_profiles.py  test_core_secure_s.py  test_core_sensor_reset.py  test_core_users.py  test_core_zone_control.py  test_core_zone_settings.py  test_core_zone_status.py  test_crypto.py  test_crypto_edges.py  test_entities.py  test_package.py  test_panel_arming.py  test_panel_arming_flags.py  test_panel_connection.py  test_panel_integration.py  test_panel_misc.py  (+22 more)
website/: .npmrc  docusaurus.config.js  package-lock.json  package.json
(+260 files in other folders)
