[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydmp"
version = "1.0.1"
description = "Python library for controlling DMP alarm systems"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Anthony Mattas", email = "anthony@mattas.net" }
]
keywords = ["dmp", "alarm", "security", "home-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "black==26.5.1",
    "mypy>=1.5",
    "ruff>=0.6",
    "pre-commit>=3.4",
]
cli = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
]
docs = [
    "zensical==0.0.50",
    "pydoc-markdown==4.8.2",
]

[project.scripts]
pydmp = "pydmp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pydmp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=pydmp --cov-report=term-missing --cov-report=html"
