[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydmp"
version = "1.1.0"
description = "Python library for controlling DMP alarm systems"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Anthony Mattas", email = "anthony@mattas.net" }
]
keywords = ["dmp", "alarm", "security", "home-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "black==26.5.1",
    "mypy==2.3.0",
    "ruff==0.15.22",
    "pre-commit==4.6.1",
    # The verify's build job runs `python -m build` from the dev install.
    "build==1.5.0",
    # CI installs .[dev] only and the test suite imports pydmp.cli — the cli deps must
    # ride along. Inlined (not a pydmp[cli] self-reference) because the §11.3 pin-form
    # gate doesn't yet recognize self-referential extras; keep in sync with [cli].
    "click==8.4.1",
    "pyyaml==6.0.3",
    "rich==15.0.0",
]
cli = [
    "click==8.4.1",
    "pyyaml==6.0.3",
    "rich==15.0.0",
]
docs = [
    "zensical==0.0.50",
    "pydoc-markdown==4.8.2",
]

[project.scripts]
pydmp = "pydmp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pydmp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/pydmp"]
